# python-starter

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  dev-requirements.txt  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements-dev.txt
src/py_starter/: __about__.py
tests/: __init__.py
